# openclaw-livekit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MIGRATION.md  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
agents/aoi/: README.md  pyproject.toml
agents/aoi/prompts/: system.md
agents/aoi/src/: __init__.py  _shared.py  agent.py
agents/aoi/tests/: test_agent.py
agents/nyla/: README.md  pyproject.toml
agents/nyla/prompts/: system.md
agents/nyla/src/: _shared.py  agent.py  agent_text.py
agents/nyla/tests/: test_agent.py  test_integration.py
agents/party/: README.md  pyproject.toml
agents/party/prompts/: system.md
agents/party/src/: agent.py
agents/party/tests/: test_agent.py
config/: dispatch-rule-direct.json.example  dispatch-rule-per-call.json.example  docker-compose.yaml.example  launchd.plist.example  livekit-sip.yaml.example  livekit.yaml.example  secrets.env.example  sip-dispatch-aoi.json.example  sip-dispatch-nyla.json.example  sip-dispatch-party.json.example  sip-inbound-trunk.json.example
config/launchd/: ai.openclaw.livekit-agent.plist.template
docs/: ARCHITECTURE.md  DISPATCH-RULE-GOTCHAS.md  OPERATIONS.md  PROJECT-STATUS.md  agent-changes.md  twilio-trunk.md
openclaw-livekit-agent-aoi/: AGENTS.md  pyproject.toml
openclaw-livekit-agent-aoi/src/: _shared.py
openclaw-livekit-agent-aoi/tests/: conftest.py
openclaw-livekit-agent-nyla/: .env.example  .gitignore  AGENTS.md  README.md
openclaw-livekit-agent-nyla/src/: __init__.py  agent_text.py
openclaw-livekit-agent-party/: AGENTS.md  README.md  pyproject.toml
openclaw-livekit-agent-party/src/: agent.py
openclaw-livekit-agent-sdk/: AGENTS.md  README.md  pyproject.toml
openclaw-livekit-agent-sdk/src/openclaw_livekit_agent_sdk/: config.py  gateway_client.py  musubi_client.py  telemetry.py  telephony.py  trace.py  transcript.py
openclaw-livekit-agent-sdk/src/openclaw_livekit_agent_sdk/tools/: __init__.py  academy.py  memory.py  sessions.py
openclaw-livekit-agent-sdk/tests/: conftest.py  test_callback_guardrails.py  test_cli_spawner.py  test_env.py  test_imports.py  test_tools_memory.py  test_tools_sessions.py  test_trace.py
openclaw-livekit-sip/: AGENTS.md  MIGRATION.md  README.md
openclaw-livekit-sip/config/: dispatch-rule-direct.json.example  docker-compose.yaml.example  livekit-sip.yaml.example
openclaw-livekit-sip/docs/: architecture.md  diagnostic-3379.md  rollback.md  twilio-trunk.md
openclaw-livekit-sip/scripts/: setup-infra.sh
prompts/: system.md
scripts/: bootstrap.sh  cycle-agents.sh  deploy-agents.sh  health-check.sh  register-sip-routing.sh  setup-infra.sh  tail-logs.sh  teardown-agents.sh  text_simulator.py  truncate-logs.sh
sdk/: README.md  TODO.md  pyproject.toml
sdk/scripts/: text_simulator.py
sdk/src/sdk/: __init__.py  cli_spawner.py  config.py  constants.py  env.py  gateway_client.py  musubi_client.py  musubi_v2_client.py  postcall.py  telemetry.py  telephony.py  trace.py  transcript.py
sdk/tests/: conftest.py  test_callback_guardrails.py  test_cli_spawner.py  test_composition.py  test_config.py  test_constants.py  test_env.py  test_imports.py  test_musubi_live_smoke.py  test_musubi_v2_client.py  test_telephony.py  test_tools_academy.py  test_tools_core.py  test_tools_household.py  test_tools_memory.py  test_tools_musubi_voice.py  test_tools_sessions.py  test_trace.py
src/: __init__.py  _shared.py  agent.py  agent_text.py
src/openclaw_livekit_agent_sdk/: __init__.py  cli_spawner.py  constants.py  env.py  postcall.py  telephony.py
src/openclaw_livekit_agent_sdk/tools/: academy.py  core.py  memory.py  sessions.py
tests/: test_agent.py  test_composition.py  test_config.py  test_constants.py  test_integration.py  test_telephony.py  test_tools_academy.py  test_tools_core.py  test_tools_memory.py  test_tools_sessions.py
tools/: README.md  pyproject.toml
tools/src/tools/: __init__.py  academy.py  base_agent.py  core.py  household.py  memory.py  musubi_voice.py  sessions.py
