[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-livekit-agent-party"
version = "0.1.0"
description = "Party voice agent — chained STT/LLM/TTS baseline for multi-agent rooms"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openclaw-livekit-agent-sdk",
    "livekit-agents[openai,google,silero]~=1.5",
    "livekit-plugins-elevenlabs~=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]
