[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-livekit-agent-party"
version = "0.1.0"
description = "Party voice agent — chained STT/LLM/TTS baseline for the Harem World multi-agent room"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openclaw-livekit-agent-sdk",
    "livekit-agents[openai,google,silero]~=1.5",
    "livekit-plugins-elevenlabs~=1.5",
]

# uv-only: resolve the sibling SDK as a local editable path.
# pip/setuptools ignore this block and treat the SDK dep as a bare name.
[tool.uv.sources]
openclaw-livekit-agent-sdk = { path = "../openclaw-livekit-agent-sdk", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
