[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-livekit-agent-nyla"
version = "0.1.0"
description = "Nyla voice agent — Gemini 2.5 Flash Native Audio"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openclaw-livekit-agent-sdk",
    "livekit-agents[google]~=1.5",
]

# uv-only: resolve the sibling SDK as a local editable path.
# pip/setuptools ignore this block and treat the SDK dep as a bare name.
# When Nyla eventually forks to her own machine or version, swap this to
# { git = "ssh://git@...", rev = "<sha>" } and republish.
[tool.uv.sources]
openclaw-livekit-agent-sdk = { path = "../openclaw-livekit-agent-sdk", editable = true }

[dependency-groups]
# Integration tests import pytest_asyncio directly. Declare it so a fresh
# `uv sync` gets a working pytest env instead of relying on transitive
# pulls from livekit-agents.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
