[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-livekit-agent-aoi"
version = "0.1.0"
description = "Aoi voice agent — Gemini 2.5 Flash Live"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openclaw-livekit-agent-sdk",
    "livekit-agents[google]~=1.5",
]

# uv-only: resolve the sibling SDK as a local editable path.
# pip/setuptools ignore this block and treat the SDK dep as a bare name.
# When Aoi eventually forks to her own machine or version, swap this to
# { git = "ssh://git@...", rev = "<sha>" } and republish.
[tool.uv.sources]
openclaw-livekit-agent-sdk = { path = "../openclaw-livekit-agent-sdk", editable = true }

[dependency-groups]
# Declared explicitly so `uv sync` gets a working pytest env on a fresh
# machine. Running "by accident" on a dirty venv bit us once in the
# monorepo migration.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
