[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-livekit-agent-sdk"
version = "0.1.0"
description = "Shared tools, clients, and utilities for OpenClaw LiveKit voice agents"
requires-python = ">=3.11,<3.13"
dependencies = [
    "livekit-agents~=1.5",
    "aiohttp",
    "python-dotenv",
]

[dependency-groups]
# Declared explicitly so `uv sync` installs them deterministically. The
# SDK's telephony tests use @pytest.mark.asyncio — without pytest-asyncio
# they silently turn into sync no-ops that never exercise the async code.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
